--- a/awesome-portfolio/requirements.txt
+++ b/awesome-portfolio/requirements.txt
@@ -1,5 +1,8 @@
 # requirements.txt
-Flask==2.3.3
+Flask>=2.0
+Werkzeug>=2.0
+Pillow>=9.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
 flask-cors==4.0.0
+gunicorn
